--- a/style/style.css
+++ b/style/style.css
@@ -327,7 +327,7 @@ body::-webkit-scrollbar {
   margin-bottom: 10px;
 }
 .img-github,
-.img-velog {
+.img-tistory {
   width: 65px;
 }
 .box-footer p {
